project: adjusted detail page

--- a/public/project/client/views/search/detail.view.html
+++ b/public/project/client/views/search/detail.view.html
@@ -22,7 +22,11 @@
         </div>
     </div>
 </div>
-<div ng-show="model.addSuccess" class="alert alert-success" role="alert"><p align="center">Added to my favorites!</p></div>
+<div class="row">
+    <div class="col-xs-12 col-sm-10 col-md-8 col-md-push-1">
+        <div ng-show="model.addSuccess" class="alert alert-success" role="alert"><p align="center">Added to my favorites!</p></div>
+    </div>
+</div>
 <div class="detailPageContent">
     <!--Doctor's demographic information overview-->
     <div class="row">
