project: adjusted detail page

--- a/public/project/client/views/search/detail.view.html
+++ b/public/project/client/views/search/detail.view.html
@@ -139,7 +139,7 @@
                 </div>
             </div>
             <div class="col-md-8 col-sm-8">
-                <div class="row">
+                <div class="row detailReviewStars">
                     <div class="col-md-4 col-sm-4">
                         <div>Overall Rating</div>
                         <input-stars
