project: made rate page mobile friendly

--- a/public/project/client/views/search/detail.view.html
+++ b/public/project/client/views/search/detail.view.html
@@ -2,7 +2,7 @@
 <div class="row detailHeader">
     <div class="col-xs-12 col-sm-10 col-md-8 col-md-push-1">
         <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 detailImgSection">
-            <div align="center" ><img class="detailImg" ng-src="{{model.data.profile.image_url}}"></div>
+            <div align="center" ><img class="img-circle" class="detailImg" ng-src="{{model.data.profile.image_url}}"></div>
             <div align="center" class="detailVerifyBtn"><a ng-click="model.openVerifPop()">This is me</a></div>
         </div>
         <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6 detailBreifSection">
