--- a/public/project/client/views/rate/rate.view.html
+++ b/public/project/client/views/rate/rate.view.html
@@ -1,22 +1,28 @@
 <div class="row editReviewHeader">
-    <div class="col-md-6 col-md-push-3 col-sm-6 col-sm-push-3">
-        <div class="col-sm-3"><img class="img-circle" ng-src="{{model.doctor.profile.image_url}}"></div>
-        <div class="col-sm-9">
-            <ul class="list-unstyled">
-                <li>{{model.doctor.profile.first_name}} &nbsp {{model.doctor.profile.last_name}}</li>
-                <li>{{model.doctor.specialties[0].name}}</li>
-                <li><img ng-src="{{model.doctor.ratings[0].image_url_small}}"></li>
-                <li>&nbsp;</li>
-                <li>{{model.doctor.practices[0].name}}</li>
-                <li>{{model.doctor.practices[0].phones[0].number}}</li>
-            </ul>
+    <div class="col-sm-6 col-sm-push-3 col-md-6 col-md-push-3">
+        <div class="row">
+            <div class="col-xs-3  col-sm-3 col-md-3 col-lg-3 detailImgSection">
+                <img class="img-circle detailImg" ng-src="{{model.doctor.profile.image_url}}">
+            </div>
+            <div class="col-xs-3 col-sm-6 col-md-6 col-lg-6 detailBreifSection">
+                <ul class="list-unstyled">
+                    <li class="detailName">{{model.doctor.profile.first_name}} &nbsp {{model.doctor.profile.last_name}}</li>
+                    <li class="detailSpecialty">{{model.doctor.specialties[0].actor}}</li>
+                    <li class="detailRateImg"><img ng-src="{{model.doctor.ratings[0].image_url_small}}"></li>
+                    <li>{{model.doctor.practices[0].name}}</li>
+                    <li>{{model.doctor.practices[0].phones[0].number}}</li>
+                </ul>
+            </div>
+        </div>
+        <div class="row">
+            <hr>
         </div>
     </div>
 </div>
-<hr>
+
 <div ng-show="model.submitSuccuss" class="alert alert-success" role="alert"><p align="center">Rate Success!</p></div>
 <div class="row">
-    <div class="col-md-4 col-md-push-3">
+    <div class="col-sm-4 col-sm-push-3 col-md-4 col-md-push-3">
         <div class="form-group">
             <label for="overallRating">Overall Rating:</label>
             <jk-rating-stars id="overallRating" max-rating="5" rating="rate.overall" read-only="false">
@@ -35,7 +41,7 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-md-5 col-md-push-3">
+    <div class=" col-sm-5 col-sm-push-3 col-md-5 col-md-push-3">
         <div class="form-group">
             <label for="comments">Comments:</label>
             <textarea ng-model="rate.comments" class="form-control" rows="8" id="comments"></textarea>
@@ -43,10 +49,10 @@
     </div>
 </div>
 <div class="row">
-    <div class="col-md-2 col-md-offset-3">
+    <div class="col-sm-2 col-sm-offset-3 col-md-2 col-md-offset-3 rateBtn">
         <a ng-click="model.submit(rate)" class="btn btn-success btn-block" role="button">Submit</a>
     </div>
-    <div class="col-md-2">
+    <div class="col-sm-2 col-md-2 rateBtn">
         <a ng-click="model.cancel(rate)" class="btn btn-warning btn-block" role="button">Cancel</a>
     </div>
 </div>
