project: made favorite page mobile friendly

--- a/public/project/client/views/users/profile.view.html
+++ b/public/project/client/views/users/profile.view.html
@@ -25,10 +25,10 @@
             <input ng-model="model.currentUser.phone" class="form-control" type="text" id="phone" placeholder="phone number">
         </div>
         <div class="row">
-            <div class="col-md-3">
+            <div class="col-md-3 rateBtn">
                 <a class="btn btn-success btn-block" ng-click="model.updateProfile()">Save</a>
             </div>
-            <div class="col-md-3">
+            <div class="col-md-3 rateBtn">
                 <a class="btn btn-default btn-block" ng-click="model.cancelUpdate()">Cancel</a>
             </div>
         </div>
