--- a/public/project/client/views/favorites/favorite.view.html
+++ b/public/project/client/views/favorites/favorite.view.html
@@ -16,10 +16,10 @@
                     <!--card body-->
                     <div class="favoriteCardBody">
                         <div class="row">
-                            <div class="col-sm-4 col-xs-4 col-md-4">
+                            <div class="col-xs-4 col-sm-4 col-md-4">
                                 <img class="favoriteCardImg" ng-src="{{doctor.profile.image_url}}">
                             </div>
-                            <div class="col-md-8 favoriteCardInfo">
+                            <div class="col-xs-4 col-md-8 col-md-4 favoriteCardInfo">
                                 <div><a href="#/detail/{{doctor.uid}}">Dr.{{doctor.profile.first_name}} {{doctor.profile.last_name}}</a></div>
                                 <div><img ng-src="{{doctor.ratings[0].image_url_small}}"></div>
                                 <br>
