--- a/public/project/client/views/reviews/review.view.html
+++ b/public/project/client/views/reviews/review.view.html
@@ -1,45 +1,32 @@
 <div class="row">
     <!--sidebar-->
     <div ng-include src="'views/navbar/navbar.view.html'"></div>
-    <div class="col-md-8 ">
-    <div class="row reviewCard" ng-repeat="review in model.reviews">
-        <div class="col-md-3">
-            <p ng-show="currentUser.role == 'Provider'">By {{review.username}}</p>
-            <p ng-show="currentUser.role == 'Patient'">To {{review.doctorName}}</p>
-            <p>{{review.reviewDate | date}}</p>
-            <div ng-hide="review.reply || currentUser.role == 'Patient'"> <a ng-click="model.openReplyBox(review._id)"><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span> Reply</a></div>
-            <div ng-if="currentUser.role == 'Patient'"> <a ng-click="model.edit(review)"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Edit</a></div>
-            <div ng-if="currentUser.role == 'Patient'"> <a ng-click="model.openRemovePop(review)"><span class="glyphicon glyphicon glyphicon-remove" aria-hidden="true"></span> Remove</a></div>
-        </div>
-        <div class="col-md-9">
-            <div class="row">
-                <div class="col-md-4">
-                    <div>Overall Rating</div>
-                    <div><input-stars
-                            max="5"
-                            icon-base="fa fa-fw"
-                            icon-empty="fa fa-star-o"
-                            icon-hover="hover"
-                            icon-full="fa fa-star"
-                            ng-model="review.overall"
-                            readonly="true">
-                    </div>
+    <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
+        <div class="row reviewCard" ng-repeat="review in model.reviews">
+            <!--review meta info and operation-->
+            <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3 reviewCardMetaInfo">
+                <p ng-show="currentUser.role == 'Provider'">By {{review.username}}</p>
+                <p ng-show="currentUser.role == 'Patient'">To {{review.doctorName}}</p>
+                <p>{{review.reviewDate | date}}</p>
+                <div ng-hide="review.reply || currentUser.role == 'Patient'">
+                    <a ng-click="model.openReplyBox(review._id)"><span class="glyphicon glyphicon-envelope"
+                                                                       aria-hidden="true"></span> Reply</a>
                 </div>
-                <div class="col-md-4">
-                    <div>Bedside Manner</div>
-                    <div><input-stars
-                            max="5"
-                            icon-base="fa fa-fw"
-                            icon-empty="fa fa-star-o"
-                            icon-hover="hover"
-                            icon-full="fa fa-star"
-                            ng-model="review.bedsideManner"
-                            readonly="true">
-                    </div>
+                <div ng-if="currentUser.role == 'Patient'">
+                    <a ng-click="model.edit(review)"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span>
+                        Edit</a>
                 </div>
-                <div class="col-md-4">
-                    <div>
-                        <div>Wait Time</div>
+                <div ng-if="currentUser.role == 'Patient'">
+                    <a ng-click="model.openRemovePop(review)"><span class="glyphicon glyphicon glyphicon-remove"
+                                                                    aria-hidden="true"></span> Remove</a>
+                </div>
+            </div>
+            <!--review content-->
+            <div class="col-xs-12 col-sm-9 col-md-9 col-lg-9">
+                <!--review rating stars-->
+                <div class="row reviewCareRatingStars">
+                    <div class="col-xs-12 col-sm-4 col-md-4">
+                        <div>Overall Rating</div>
                         <div>
                             <input-stars
                                     max="5"
@@ -47,51 +34,87 @@
                                     icon-empty="fa fa-star-o"
                                     icon-hover="hover"
                                     icon-full="fa fa-star"
-                                    ng-model="review.waitTime"
+                                    ng-model="review.overall"
                                     readonly="true">
                         </div>
                     </div>
+                    <div class="col-xs-12 col-sm-4 col-md-4">
+                        <div>Bedside Manner</div>
+                        <div>
+                            <input-stars
+                                    max="5"
+                                    icon-base="fa fa-fw"
+                                    icon-empty="fa fa-star-o"
+                                    icon-hover="hover"
+                                    icon-full="fa fa-star"
+                                    ng-model="review.bedsideManner"
+                                    readonly="true">
+                        </div>
+                    </div>
+                    <div class="col-xs-12 col-sm-4 col-md-4">
+                        <div>
+                            <div>Wait Time</div>
+                            <div>
+                                <input-stars
+                                        max="5"
+                                        icon-base="fa fa-fw"
+                                        icon-empty="fa fa-star-o"
+                                        icon-hover="hover"
+                                        icon-full="fa fa-star"
+                                        ng-model="review.waitTime"
+                                        readonly="true">
+                            </div>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="row">
-                <div class="col-md-12">
-                    <p>{{review.comments}}</p>
+                <!--review comments-->
+                <div class="row">
+                    <div class="col-md-12">
+                        <p>{{review.comments}}</p>
+                    </div>
                 </div>
-            </div>
-            <!--Doctor rely section-->
-            <div ng-if="review.reply" ng-hide="model.editId == review._id" ng-mouseenter="model.toggleIcon(review._id)" ng-mouseleave="model.toggleIcon()" class="row commentCard">
-                <div class="col-md-12">
-                    <p>
-                        <strong>Comment from {{review.doctorName}}</strong>
-                        <a class="pull-right replyBtn" ng-show="model.showIcon == review._id && currentUser.role == 'Provider'" ng-click="model.openRemovePop(review)"><span class="glyphicon glyphicon glyphicon-remove" aria-hidden="true"></span> Remove</a>
-                        <a class="pull-right replyBtn" ng-show="model.showIcon == review._id && currentUser.role == 'Provider'" ng-click="model.openEditBox(review._id, review.reply.content)"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span> Edit</a>
-                    </p>
-                    <p>{{review.reply.date | date}}</p>
+                <!--Doctor rely section-->
+                <div ng-if="review.reply" ng-hide="model.editId == review._id"
+                     ng-mouseenter="model.toggleIcon(review._id)" ng-mouseleave="model.toggleIcon()"
+                     class="row commentCard">
+                    <div class="col-md-12">
+                        <p>
+                            <strong>Comment from {{review.doctorName}}</strong>
+                            <a class="pull-right replyBtn"
+                               ng-show="model.showIcon == review._id && currentUser.role == 'Provider'"
+                               ng-click="model.openRemovePop(review)"><span class="glyphicon glyphicon glyphicon-remove"
+                                                                            aria-hidden="true"></span> Remove</a>
+                            <a class="pull-right replyBtn"
+                               ng-show="model.showIcon == review._id && currentUser.role == 'Provider'"
+                               ng-click="model.openEditBox(review._id, review.reply.content)"><span
+                                    class="glyphicon glyphicon-edit" aria-hidden="true"></span> Edit</a>
+                        </p>
+                        <p>{{review.reply.date | date}}</p>
+                    </div>
+                    <div class="col-md-12">
+                        <p>{{review.reply.content}}</p>
+                    </div>
                 </div>
-                <div class="col-md-12">
-                    <p>{{review.reply.content}}</p>
+                <div class="row replyBox" ng-hide="model.replyId!= review._id">
+                    <div class="form-group">
+                        <textarea class="form-control" rows="3" ng-model="reply.content"/>
+                    </div>
+                    <div class="pull-right">
+                        <button class="btn btn-success" ng-click="model.submiteReply(reply, review)">Reply</button>
+                        <button class="btn btn-danger" ng-click="model.cancelReply(reply)">Cancel</button>
+                    </div>
                 </div>
-            </div>
-            <div class="row replyBox" ng-hide="model.replyId!= review._id">
-                <div class="form-group">
-                    <textarea class="form-control" rows="3" ng-model="reply.content"/>
-                </div>
-                <div class="pull-right">
-                    <button class="btn btn-success" ng-click="model.submiteReply(reply, review)">Reply</button>
-                    <button class="btn btn-danger" ng-click="model.cancelReply(reply)">Cancel</button>
-                </div>
-            </div>
-            <div class="row replyBox" ng-hide="model.editId!= review._id">
-                <div class="form-group">
-                    <textarea class="form-control" rows="3" ng-model="model.reviewContent"/>
-                </div>
-                <div class="pull-right">
-                    <button class="btn btn-success" ng-click="model.updateReply(review)">Update</button>
-                    <button class="btn btn-danger" ng-click="model.cancelEdit()">Cancel</button>
+                <div class="row replyBox" ng-hide="model.editId!= review._id">
+                    <div class="form-group">
+                        <textarea class="form-control" rows="3" ng-model="model.reviewContent"/>
+                    </div>
+                    <div class="pull-right">
+                        <button class="btn btn-success" ng-click="model.updateReply(review)">Update</button>
+                        <button class="btn btn-danger" ng-click="model.cancelEdit()">Cancel</button>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
     </div>
 </div>
 
